<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".First_LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_kopi" />

    <ImageView
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        android:id="@+id/biji"
        android:layout_marginTop="40dp"
        android:layout_width="220dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/logo_biji"
        />

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/welcome_to_kuypi"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/biji"
        />

    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:text="@string/login"
        android:textColor="#F4F4F4"
        android:textSize="30sp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_welcome"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="320dp"
        android:height="50dp"
        android:background="@drawable/edit_text_login"
        android:fontFamily="@font/poppins"
        android:hint="@string/username"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:textAlignment="textStart"
        android:inputType="textEmailAddress"
        android:paddingVertical="10dp"
        android:paddingLeft="25dp"
        android:textColor="@color/white"
        app:cornerRadius="40dp"
        android:elevation="7dp"
        android:textColorHint="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_login" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="320dp"
        android:height="50dp"
        android:background="@drawable/edit_text_login"
        android:fontFamily="@font/poppins"
        android:hint="Password"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:textAlignment="textStart"
        android:inputType="textPassword"
        android:paddingVertical="10dp"
        android:paddingLeft="25dp"
        android:elevation="7dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"

        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:includeFontPadding="false"
        android:text="@string/forgot"
        android:layout_marginRight="70dp"
        android:textColor="#F4F4F4"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:width="160dp"
        android:height="50dp"
        android:background="@drawable/button_login"
        android:elevation="7dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:cornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:text="@string/register"
        android:textColor="#F4F4F4"
        android:textSize="14sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_login"
        />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:includeFontPadding="false"
        android:text="Or login with"
        android:textColor="#F4F4F4"
        android:textSize="14sp"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register"
        />

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/or"
        android:gravity="center_horizontal"
        >

        <ImageView
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/or"
                android:id="@+id/google_login"
                android:layout_marginTop="10dp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:srcCompat="@drawable/gugel_icon"
            />

        <ImageView
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/or"
            android:id="@+id/facebook_login"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:srcCompat="@drawable/facebook"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
